Mejorando el boton modo dark

--- a/css/input.css
+++ b/css/input.css
@@ -57,27 +57,27 @@ body.dark{
 
 .switch{
     width: 60px;
+    height: 29px;
     background: gray;
-    border-radius: 1000px;
-    border: none;
+    border-radius: 50px;
     position: relative;
     cursor: pointer;
     display: flex;
-    outline: none;
+    align-items: center;
+
 
 }
 
 .switch::after{
     content: "";
-    display: block;
-    width: 30px;
-    height: 30px;
     position: absolute;
     background-color: white;
-    top: 0;
-    left: 0;
+    width: 25px;
+    height: 25px;
+    top: 2px;
+    left: 2px;
     right: unset;
-    border-radius: 100px;
+    border-radius: 50px;
     transition: .3s ease all;
 }
 
@@ -87,13 +87,13 @@ body.dark{
 
 }
 .switch.active::after{
-    right: 0;
+    right: 2px;
     left: unset;
 }
 
 span{
     width: 30px;
-    height: 30px;
+    height:30px;
     line-height: 30px;
     display: block;
     background: none;
