--- a/css/input.css
+++ b/css/input.css
@@ -11,12 +11,12 @@
 }
 
 .h1{
-    @apply text-blue-600 m-3 text-center text-xl  dark:text-white dark:font-bold transition-all
+    @apply text-blue-600 m-3 text-center text-xl font-bold  dark:text-white dark:font-bold transition-all
 }
 
 
 .h2{
-    @apply text-blue-900 m-3 text-center text-lg dark:text-white dark:font-bold transition-all
+    @apply text-blue-900 m-3 text-center text-lg font-bold dark:text-white dark:font-bold transition-all
 }
 
 .titulos{
@@ -27,7 +27,7 @@
 }
 
 .label{
-    @apply text-white mt-2 dark:font-bold 
+    @apply text-blue-900 mt-2 font-bold dark:font-bold dark:text-white
 }
 
 .section{
@@ -43,8 +43,10 @@
 }
 
 .button{
-    @apply bg-blue-900 text-white py-1 px-2 rounded-lg hover:bg-blue-500 text-xs mt-2 mb-2 dark:font-bold 
+    @apply bg-white text-blue-900 py-1 px-2 rounded-lg hover:bg-blue-900 hover:text-white text-xs mt-2 mb-2 font-bold dark:font-bold  dark:bg-blue-900 dark:text-white dark:hover:bg-white dark:hover:text-blue-900
 }
+
+
 
 body{
     transition: .3s ease all;
